--- a/css/main.css
+++ b/css/main.css
@@ -2456,7 +2456,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 .container .logInCreateAccount .tags .formCreateAccount .tag .tagCreateAccount {
   font-size: 0.8rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #ffffff;
   text-align: center;
   writing-mode: vertical-rl;
@@ -2499,7 +2499,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 .container .logInCreateAccount .tags .formLogIn .tag .tagLogIn {
   font-size: 0.8rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #ffffff;
   text-align: center;
   writing-mode: vertical-rl;
@@ -2520,6 +2520,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .container .logInCreateAccount .tags .formLogIn .formFloating {
   width: 50%;
   color: #000000;
+  font-family: "Jura", sans-serif;
   font-size: 0.9rem;
   font-weight: 600;
   display: flex;
@@ -2533,6 +2534,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   color: #000000;
   font-size: 0.8rem;
   font-weight: 400;
+  font-family: "Jura", sans-serif;
   padding: 10px 0px 10px 10px;
   border-top: transparent;
   border-right: transparent;
@@ -2552,7 +2554,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-size: 1rem;
   font-weight: 700;
   color: #ffffff;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   padding: 10px;
   background-color: #000000;
   border: 1px solid #000000;
@@ -2566,7 +2568,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .container .logInCreateAccount .tags .formLogIn .ctaToSignIn p {
   color: #2e2e2e;
   font-size: 0.8rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   font-weight: 500;
   margin-bottom: -15px;
 }
@@ -2574,7 +2576,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-size: 0.8rem;
   font-weight: 700;
   color: #2e2e2e;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   text-decoration: none;
 }
 .container .logInCreateAccount .tags .formLogIn label .ctaFormCreateAccount:hover {
@@ -2592,6 +2594,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   color: #000000;
   font-size: 0.9rem;
   font-weight: 600;
+  font-family: "Jura", sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -2603,6 +2606,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   color: #000000;
   font-size: 0.8rem;
   font-weight: 400;
+  font-family: "Jura", sans-serif;
   padding: 10px 0px 10px 10px;
   border-top: transparent;
   border-right: transparent;
@@ -2622,7 +2626,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-size: 1rem;
   font-weight: 700;
   color: #ffffff;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   padding: 10px;
   background-color: #000000;
   border: 1px solid #000000;
@@ -2636,7 +2640,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .container .logInCreateAccount .tags .formCreateAccount .ctaToCreateAccount p {
   color: #2e2e2e;
   font-size: 0.8rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   font-weight: 500;
   margin-bottom: -15px;
 }
@@ -2644,7 +2648,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-size: 0.8rem;
   font-weight: 700;
   color: #2e2e2e;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   text-decoration: none;
 }
 .container .logInCreateAccount .tags .formCreateAccount label .ctaFormLogIn:hover {
@@ -2771,7 +2775,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   font-size: 0.7rem;
   font-weight: 700;
   color: #ffffff;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
 }
 .headerSignIn #menuSide {
   display: flex;
@@ -2843,7 +2847,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   padding-left: 30px;
   padding-right: 100px;
   font-size: 1rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #ffffff;
   font-weight: 600;
   text-decoration: none;
@@ -2859,7 +2863,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   display: block;
   width: 100%;
   font-size: 1rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #ffffff;
   font-weight: 600;
   margin: 0px auto 0px 0px;
@@ -2882,7 +2886,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .headerSignIn .menuSide .contactUs p {
   width: 100%;
   font-size: 1rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #ffffff;
   font-weight: 600;
   padding-left: 30px;
@@ -2963,7 +2967,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .sectionShop .menuCart .menuCartlist .choiceCartlist .cartlistWord {
   width: inherit;
   font-size: 1.3rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #BC2327;
   font-weight: 600;
   margin: 0px;
@@ -2978,7 +2982,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .category .titleCartlist {
   font-size: 1rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #BC2327;
   font-weight: 600;
   margin: 15px 0px;
@@ -3003,7 +3007,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .description .price {
   font-size: 1rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #424242;
   font-weight: 600;
 }
@@ -3016,13 +3020,13 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   height: 35px;
   padding: 2px;
   font-size: 1rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #BC2327;
   font-weight: 600;
 }
 .sectionShop .menuCart .menuCartlist .choiceCartlist .cart .cartlist .total {
   font-size: 1rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #BC2327;
   font-weight: 600;
 }
@@ -3040,7 +3044,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   margin: 2px;
   width: inherit;
   font-size: 1rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #424242;
   font-weight: 600;
   display: flex;
@@ -3059,7 +3063,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   align-items: center;
   margin: 20px auto;
   font-size: 1rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   font-weight: 600;
   color: #ffffff;
   border: 1px solid transparent;
@@ -3122,7 +3126,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .sectionWishlist .menuWishlist .choiceWishlist .wishlistWord {
   width: inherit;
   font-size: 1.3rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #BC2327;
   font-weight: 600;
   margin: 0px;
@@ -3137,7 +3141,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 .sectionWishlist .menuWishlist .choiceWishlist .wish .category .titleWishlist {
   font-size: 1rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #BC2327;
   font-weight: 600;
   margin: 15px 0px;
@@ -3160,7 +3164,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 .sectionWishlist .menuWishlist .choiceWishlist .wish .wishlist .blockProduct .description .price {
   font-size: 1rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #BC2327;
   font-weight: 600;
 }
@@ -3185,7 +3189,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 .tagGetOff .discount .title {
   font-size: 1rem;
-  font-family: Jura, sans-serif;
+  font-family: "Jura", sans-serif;
   color: #ffffff;
   text-align: center;
   writing-mode: vertical-rl;
@@ -3242,7 +3246,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 }
 .getOff .containerGetOff .info .paragraph .subtitle, .getOff .containerGetOff .info .paragraph .sentence, .getOff .containerGetOff .info .paragraph .cta {
   font-size: 1.8rem;
-  font-family: Jura, sans-serif;
+  font-family: "Jura", sans-serif;
   font-weight: 600;
   color: #D9D9D9;
 }
@@ -3275,7 +3279,7 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
   left: -140px;
   cursor: pointer;
   font-size: 1rem;
-  font-family: Jura, sans-serif;
+  font-family: "Jura", sans-serif;
   font-weight: 600;
   color: #E0E0E0;
   transition: color 0.3s ease;
@@ -3344,13 +3348,13 @@ html .mainContainer .skullSocialMedia .socialMedia ul li k .item .itemSocial {
 .getOff .bannerGetOff .slideGetOff .hoddy h3 {
   margin-top: 30px;
   font-size: 1.1rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #BC2327;
 }
 .getOff .bannerGetOff .slideGetOff .hoddy p {
   padding: 10px auto;
   font-size: 1rem;
-  font-family: Jura;
+  font-family: "Jura", sans-serif;
   color: #d9d9d9;
 }
 .getOff .bannerGetOff::before {
