--- a/scss/_filter.scss
+++ b/scss/_filter.scss
@@ -125,6 +125,10 @@
                             justify-content: space-between;
                             align-items: center;
                         }
+                        input{
+                            width: 16px;
+                            height: 16px;
+                        }
                     }
                 }
                 .btnFilter{
