--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -185,7 +185,7 @@
                             <p class="discount">Discount 25%<span>$374</span></p>
                             <p class="total">Total<span>$1122</span></p>
                         </article>
-                        <button class="btnCheckout">Secure checkout</button>
+                        <button type="button" class="btnCheckout">Secure checkout</button>
                     </div>
                 </nav>
             </div>
@@ -339,7 +339,7 @@
                         </div>
                     </article>
                     <article class="addToCart">
-                        <button class="btnAddToCart">Add to cart</button>
+                        <button type="button" class="btnAddToCart">Add to cart</button>
                         <img class="wishlistIcon" src="../img/wishlist_Icon.svg" alt="">
                     </article>
                     <article class="complementInfo">
