--- a/scss/_show_Room.scss
+++ b/scss/_show_Room.scss
@@ -132,11 +132,13 @@
                 width:100%;
                 display:flex;
                 flex-direction: row;
+                justify-content: space-between;
                 align-items: center;
-                gap:30px;
+                gap:50px;
                 margin: 20px auto;
                 .btnAddToCart{
-                    width:90%;
+                    width:81.5%;
+                    height: 50px;
                     color: #ffffff;
                     padding: 15px;
                     font-size: 1rem;
@@ -181,16 +183,17 @@
                     cursor: pointer;
                     transition: all 0.3s ease;
                     &:hover > .deliveryIcon{
-                        transform:scale(107%);
+                        transform:scale(109%);
                     }
                     &:hover > .creditCardIcon{
-                        transform:scale(107%);
+                        transform:scale(109%);
                     }
                     &:hover > .returnIcon{
-                        transform:scale(108%);
+                        transform:scale(109%);
                     }
                     .deliveryIcon, .creditCardIcon, .returnIcon{
                         width:35px;
+                        padding-bottom: 10px;
                         transform: scale(100%);
                         transition:transform 0.3s ease;
                     }
