--- a/scss/_sign_In_&_Create_Account.scss
+++ b/scss/_sign_In_&_Create_Account.scss
@@ -909,84 +909,11 @@
     }
 }
 
-// GetOff
+ // Banner getOff
 
-.getOff{
+.getOffHoddy{
     width:100%;
     height: 100%;
-    background-image: url("../img/background_Gift.webp");
-    background-position: top center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #131313;
-    margin: 200px 0px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    .containerGetOff{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        padding-top:100px;
-        padding-bottom: 100px;
-        .info{
-            .title{
-                font-size:4rem;
-                font-family: $fontRubik;
-                color: #BC2327;
-                margin-top: -150px;
-            }
-            .paragraph{
-                margin-top: 50px;
-                .subtitle, .sentence, .cta{
-                    font-size:1.8rem;
-                    font-family: $fontJura;
-                    font-weight: 600;
-                    color: #D9D9D9;
-                }
-                .sentence{
-                    font-size:1.5rem;
-                }
-            }
-        }
-        .hoddy{
-            animation: hoddy 2s linear 2s infinite;
-            @keyframes hoddy {
-                0%{
-                    filter: drop-shadow(0 0 1px #BC2327);
-                }
-                25%{
-                    filter: drop-shadow(0 1px 2px #BC2327);
-                }
-                50%{
-                    filter: drop-shadow(0 2px 3px #BC2327);
-                }
-                75%{
-                    filter: drop-shadow(0 3px 5px #BC2327);
-                }
-                100%{
-                    filter: drop-shadow(0 4px 6px #BC2327);
-                }
-            }
-        }
-    }
-    .ctaSentence{
-        position: relative;
-        bottom:250px;
-        left:-140px;
-        cursor: pointer;
-        font-size:1rem;
-        font-family: $fontJura;
-        font-weight: 600;
-        color: #E0E0E0;
-        transition: color .3s ease;
-        &:hover{
-            color: #BC2327;
-            text-decoration: underline;
-        }
-    }
     #cross{
         display: none;
         &:checked ~ .bannerGetOff{
@@ -1001,6 +928,7 @@
         justify-content: space-evenly;
         align-items: center;
         border-radius: 10px;
+        background-color:#00000013;
         box-shadow: 0 0 6px 4px black;
         position: fixed;
         top:-340px;
@@ -1009,12 +937,6 @@
         transform: translateY(300%);
         overflow: hidden;
         transition: .3s ease-in-out;
-        .title{
-            font-size:4rem;
-            font-family:$fontRubik;
-            color: #BC2327;
-            margin-top:20px;
-        }
         label{
             .crossCloseWhite{
                 width:25px;
@@ -1022,13 +944,19 @@
                 top:-90px;
                 right:-390px;
                 cursor: pointer;
-                z-index: 3;
+                z-index: 10;
                 transform: rotate(0deg);
                 transition: all 0.3s ease-in-out;
                 &:hover{
                     transform: rotate(90deg);
                 }
             }
+        }
+        .title{
+            font-size:4rem;
+            font-family: $fontRubik;
+            color: #BC2327;
+            margin-top:20px;
         }
         .slideGetOff{
             display: flex;
