--- a/scss/_show_Room.scss
+++ b/scss/_show_Room.scss
@@ -60,17 +60,18 @@
                     font-size: 1.2rem;
                     font-weight: 700;
                     color: #000000;
+                    margin-bottom: 20px;
                 }
                 .containerColor{
                     display:flex;
                     flex-direction: row;
                     align-items: flex-start;
-                    gap:55px;
+                    gap:30px;
                     .smallPic{
                         overflow: hidden;
                         .itemProduct{
-                            width:50px;
-                            height:70px;
+                            width:70px;
+                            height:auto;
                             object-fit: cover;
                             border: 1px solid #f1f1f1;
                             &:hover{
@@ -80,8 +81,8 @@
                     }
                     .colorBlack, .colorWhite{
                         cursor:pointer;
-                        width: 50px;
-                        height: 70px;
+                        width:70px;
+                        height:104px;
                         background-color: #000000;
                         border:1px solid #f1f1f1;
                         &:hover{
@@ -105,15 +106,16 @@
                     font-size: 1.2rem;
                     font-weight: 700;
                     color: #000000;
+                    margin-bottom: 20px;
                 }
                 .containerSize{
                     display:flex;
                     flex-direction: row;
                     align-items: flex-start;
-                    gap:55px;
+                    gap:30px;
                     .itemSize{
-                        width: 50px;
-                        height: 70px;
+                        width: 70px;
+                        height: 60px;
                         font-size: 1rem;
                         font-weight: 700;
                         cursor:pointer;
@@ -134,10 +136,10 @@
                 flex-direction: row;
                 justify-content: space-between;
                 align-items: center;
-                gap:50px;
+                gap:30px;
                 margin: 20px auto;
                 .btnAddToCart{
-                    width:81.5%;
+                    width:100%;
                     height: 50px;
                     color: #ffffff;
                     padding: 15px;
