--- a/views/sign_In_&_Create_Account.html
+++ b/views/sign_In_&_Create_Account.html
@@ -128,14 +128,11 @@
                 <img src="../img/hoddy_White.webp" alt="Hoddy pic" class="hoddy">
             </article>
             <input type="checkbox" id="cross">
-            <label for="cross">
-                <p class="ctaSentence">See more in detail...</p>
-            </label>
             <article class="bannerGetOff">
-                <h2 class="title">Get 25% off</h2>
                 <label for="cross">
-                    <img src="../img/close_Cross_White.svg" alt="Cross Icon" class="crossCloseWhite">
+                    <img class="crossCloseWhite" src="../img/close_Cross_White.svg" alt="Cross Icon">
                 </label>
+                <h2 class="title">Get 25% off</h2>
                 <div class="slideGetOff">
                     <div class="hoddy">
                         <img src="../img/hoddy1.webp" alt="Hoddy skull">
