--- a/views/show_Room.html
+++ b/views/show_Room.html
@@ -363,7 +363,7 @@
                     <div class="accordion-item accordionItem">
                         <h2 class="accordion-header title">
                             <button class="accordion-button collapsed btnCollapse shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                                <p>Description</p>
+                                <p>Description 😎</p>
                             </button>
                         </h2>
                         <div id="flush-collapseTwo" class="accordion-collapse collapse accordionCollapse" data-bs-parent="#accordionFlushExample">
@@ -376,41 +376,58 @@
                     <div class="accordion-item accordionItem">
                         <h2 class="accordion-header title">
                             <button class="accordion-button collapsed btnCollapse shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                                <p>Delivery & Return</p>
+                                <p>Delivery & Return 🚚</p>
                             </button>
                         </h2>
                         <div id="flush-collapseThree" class="accordion-collapse collapse accordionCollapse" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body accordionBodyDos">
-                                <p><span>Delivery:</span> Fast and reliable shipping options. Track your order and enjoy worldwide delivery.</p>
-                                <p><span>Return:</span> 60-day return policy. Hassle-free process. Choose a refund or exchange. Your satisfaction is our priority.</p>
+                                <p><span>Delivery:</span> Fast and reliable shipping options. Track your order and enjoy worldwide delivery.</p></br>
+                                <span>📭  _________________________  🌎  ________________________ 🚚</span></br>
+                                <p><span>Return:</span> 60-days return policy. Hassle-free process. Choose a refund or exchange. Your satisfaction is our priority.</p></br>
+                                <span>📭  __________  🚚  __________  🔄  __________  🚩  __________  🚚</span></br>
                             </div>
                         </div>
                     </div>
                     <div class="accordion-item accordionItem">
                         <h2 class="accordion-header title">
                             <button class="accordion-button collapsed btnCollapse shadow-none" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                                <p>Reviews</p>
+                                <p>Reviews 👀</p>
                             </button>
                         </h2>
                         <div id="flush-collapseOne" class="accordion-collapse collapse accordionCollapse" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body accordionBody">
                                 <div class="case">
-                                    <p>"I love the skater outfit I got from <span>Break a Leg!</span>. It's super comfortable and looks great. Fast delivery too!"</p>
-                                    <img class="rating" src="../img/rating2.webp" alt="Rating icon">
-                                    <p class="name">Steve G.</p>
-                                    <p class="date"><span>01/23/2023</span></p>
+                                    <p class="message">"I love the skater outfit I got from <span>Break a Leg!</span>. It's super comfortable and looks great. Fast delivery too!"</p>
+                                    <div class="opinion">
+                                        <img class="itemProduct" src="../img/pic14.webp" alt="Product pic">
+                                        <div class="info">
+                                            <img class="rating" src="../img/rating2.webp" alt="Rating icon">
+                                            <p class="name">Steve G.</p>
+                                            <p class="date"><span>01/23/2023</span></p>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="case">
-                                    <p>"The customer service at <span>Break a Leg!</span> is top-notch. They helped me with a return, and it was a breeze. Will definitely shop here again!"</p>
-                                    <img class="rating" src="../img/rating2.webp" alt="Rating icon">
-                                    <p class="name">Daniel M.</p>
-                                    <p class="date"><span>09/21/2023</span></p>
+                                    <p  class="message">"The customer service at <span>Break a Leg!</span> is top-notch. They helped me with a return, and it was a breeze. Will definitely shop here again!"</p>
+                                    <div class="opinion">
+                                        <img class="itemProduct" src="../img/pic38.webp" alt="Product pic">
+                                        <div class="info">
+                                            <img class="rating" src="../img/rating2.webp" alt="Rating icon">
+                                            <p class="name">Daniel M.</p>
+                                            <p class="date"><span>09/21/2023</span></p>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="case">
-                                    <p>"I'm impressed with the quality of the products from <span>Break a Leg!</span>. The skater shorts are my new favorites. Highly recommended</p>
-                                    <img class="rating" src="../img/rating2.webp" alt="Rating icon">
-                                    <p class="name">Erick W.</p>
-                                    <p class="date"><span>07/14/2023</span></p>
+                                    <p class="message">"I'm impressed with the quality of the products from <span>Break a Leg!</span>. The skater shorts are my new favorites. Highly recommended</p>
+                                    <div class="opinion">
+                                        <img class="itemProduct" src="../img/pic24.webp" alt="Product pic">
+                                        <div class="info">
+                                            <img class="rating" src="../img/rating2.webp" alt="Rating icon">
+                                            <p class="name">Erick W.</p>
+                                            <p class="date"><span>07/14/2023</span></p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
